--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
   <app-root>Loading...</app-root>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/45e03a14ce.js"></script>
   </body>
 </html>
